Encoding using RSA + Client Credentials Login Flow